--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <div>新功能开发完毕</div>
     <!-- 新增功能 -->
     <script>
       console.log(globalThis);
